[gd_scene format=3 uid="uid://cwlkje64h6oci"]

[ext_resource type="Texture2D" uid="uid://s6k5ya5ygna5" path="res://Sprites/Wizard/Wizard Walk Backward.png" id="1_2qdx2"]
[ext_resource type="Script" uid="uid://b8mb4h6481t81" path="res://Scripts/title.gd" id="1_3eqdi"]
[ext_resource type="Texture2D" uid="uid://b0dvf45oi1p84" path="res://Sprites/Wizard/Wizard Walk Right.png" id="2_3eqdi"]
[ext_resource type="Texture2D" uid="uid://8jktiyl5gnnd" path="res://Sprites/Wizard/Wizard Walk Forward.png" id="3_yu0ss"]
[ext_resource type="Texture2D" uid="uid://bnks7eo63o30f" path="res://Sprites/Wizard/Wizard Walk Left.png" id="4_6aagf"]
[ext_resource type="FontFile" uid="uid://rq77o21821pu" path="res://Miscellaneous/Retro Gaming.ttf" id="5_kyk5u"]
[ext_resource type="FontFile" uid="uid://cl6ww3fr48to3" path="res://Miscellaneous/Pixeled.ttf" id="6_cwqts"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("1_2qdx2")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("2_3eqdi")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("3_yu0ss")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("4_6aagf")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("1_2qdx2")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("1_2qdx2")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("1_2qdx2")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("1_2qdx2")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("4_6aagf")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("4_6aagf")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("4_6aagf")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("4_6aagf")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("2_3eqdi")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("2_3eqdi")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("2_3eqdi")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1odr"]
atlas = ExtResource("2_3eqdi")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gysh"]
atlas = ExtResource("3_yu0ss")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfarp"]
atlas = ExtResource("3_yu0ss")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6uwr"]
atlas = ExtResource("3_yu0ss")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_83xs0"]
atlas = ExtResource("3_yu0ss")
region = Rect2(48, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_th2ad"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1odr")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfarp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6uwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83xs0")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[node name="Title" type="Node2D" unique_id=306302624]
script = ExtResource("1_3eqdi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1859617631]
position = Vector2(210, 90)
scale = Vector2(7.5, 7.5)
sprite_frames = SubResource("SpriteFrames_th2ad")
frame_progress = 0.32315227

[node name="RichTextLabel" type="RichTextLabel" parent="." unique_id=1449609513]
offset_left = 3.0
offset_right = 172.0
offset_bottom = 89.0
theme_override_fonts/normal_font = ExtResource("5_kyk5u")
theme_override_font_sizes/normal_font_size = 24
text = "MAX
VALUE
POTIONEER"
scroll_active = false
autowrap_mode = 0

[node name="PlayButton" type="Button" parent="." unique_id=102763120]
offset_left = 10.0
offset_top = 95.0
offset_right = 57.0
offset_bottom = 126.0
text = "PLAY"

[node name="QuitButton" type="Button" parent="." unique_id=1377023303]
offset_left = 74.0
offset_top = 95.0
offset_right = 121.0
offset_bottom = 126.0
text = "QUIT"

[node name="RichTextLabel2" type="RichTextLabel" parent="." unique_id=2069008306]
offset_left = 2.0
offset_top = 154.0
offset_right = 142.0
offset_bottom = 194.0
theme_override_fonts/normal_font = ExtResource("6_cwqts")
theme_override_font_sizes/normal_font_size = 10
text = "High Score: 0"
autowrap_mode = 0

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
